fix: gap

--- a/Baekyungjin/style.css
+++ b/Baekyungjin/style.css
@@ -14,5 +14,7 @@ li {
   display: inline;
 }
 ul {
-  padding: 0;
+  list-style-type: none;
+  gap: 10px;
+  display: flex;
 }
